# interviewprep

./: .clang-format  arithmeticString.cpp  builtinFunctions.c  circularQueuePackets.c  circularQueuePackets.cpp  deleteNode.cpp  dsaPatterns.txt  findPosition.cpp  getmedian.cpp  hashMap.cpp  invertBits.cpp  logs.txt  removeOneDigitToMin.c  routingTable.cpp  sizeof.c  stackOverflowDetect.c  substringPalindrome.cpp  trie.cpp
arista/: bitonicPoint.cpp  container_of.c  deleteNode.cpp  findPosition.cpp  nextGreaterElement.cpp  pointer_types.c  removeDigit.cpp  removeOneDigitToMin.c  removeOneDigitToMin.cpp  sizeof.c
bl-ble/: convertUUIDStrtoInt.c  convertUUIDStrtoInt.cpp
circularQueue/: cQueuePacketsDynamic.c  cQueuePacketsDynamic.cpp  cQueuePacketsStatic.c  circularBufferStatic.cpp  circularBufferStaticProdCons.c  circularBufferStaticProdCons.cpp
designPatterns/: DearDiary.txt  SingleResponsibility.cpp  SingleResponsibility_original.cpp  openClosed.cpp
dnsCache/: dnsCacheHashMap.cpp  dnsCacheTrie.cpp
lruCache/: CMakeLists.txt  build.sh  hash.c  hash.h  main.c
lruCache/packet/: lru_packet_cache.c  lru_packet_cache.h
lruCache/simple/: lruCache.c  lruCacheSimple.c  lruCacheWithHashing.c
maxXOR/: main.cpp
mem_apis/: memcpy.c  memset.c
memoryLayout/: Makefile  libshared.c  libshared.h  main.c
memoryLeakDetector/: detector.cpp
memorypool/: memorypool.c  memorypool.cpp  memorypoolDLL.c  memorypoolDLL.cpp  memorypoolSLL.c  memorypoolSLL.cpp
microsoft/: cQuestion.c  cloneLinkedList.cpp
packetHandler/: PacketHandler.cpp  PacketHandler.h  build.sh  main.cpp  (+1 more)
(+51 files in other folders)
